# test_animation

./: Cargo.toml
src/: gltf_parser.rs  main.rs
