[package]
name = "test_animation"
version = "0.1.0"
authors = ["Stefan Dinescu <aaetherengine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
serde = { version = "1.0.115", features = ["derive"] } 
serde_json = "1.0.57"
anyhow = "1.0.32"

[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]